<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:gravity="center"
        android:layout_margin="@dimen/pad10"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pad10"
            android:src="@mipmap/logo_green" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="65"
        android:gravity="center|top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.iqadha_app.iQadhaText.Regular_Text
                android:id="@+id/info_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/info_email"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info_tx"
                android:gravity="center">

                <com.iqadha_app.iQadhaText.Regular_Text
                    android:id="@+id/con"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/contact"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />

                <com.iqadha_app.iQadhaText.SemiboldText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@+id/con"
                    android:gravity="center"
                    android:paddingLeft="@dimen/pad5"
                    android:text="@string/emailis"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_16" />
            </RelativeLayout>

        </RelativeLayout>

        <com.iqadha_app.iQadhaText.Regular_Text
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margine_20"
            android:gravity="center"
            android:text="@string/aim"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <com.iqadha_app.iQadhaText.Regular_Text
                android:id="@+id/halal_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margine_20"
                android:gravity="center"
                android:text="@string/develop_by"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <com.iqadha_app.iQadhaText.SemiboldText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/halal_text"
                android:gravity="center"
                android:text="@string/click_halal"
                android:textColor="@color/green"

                android:textSize="@dimen/text_16" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margine_25"
            android:gravity="center">

            <com.iqadha_app.iQadhaText.Regular_Text
                android:id="@+id/jazak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/jazak"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <com.iqadha_app.iQadhaText.SemiboldText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jazak"
                android:gravity="center"
                android:text="@string/iqadha_team"
                android:textColor="@color/green"

                android:textSize="@dimen/text_16" />
        </RelativeLayout>



        <com.iqadha_app.iQadhaText.SemiboldText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margine_25"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/green"
            android:textSize="@dimen/text_17" />
    </LinearLayout>

</LinearLayout>
