<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:padding="@dimen/pad10"
            android:src="@mipmap/logo_green" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_marginLeft="@dimen/margine_20"
        android:layout_marginRight="@dimen/margine_20"
        android:orientation="vertical">


        <com.iqadha_app.iQadhaText.SemiBold_edit
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/pass"
            android:layout_gravity="center"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_18"
            android:singleLine="true"
            android:background="@drawable/edit_back"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:hint="@string/email" />




        <com.iqadha_app.iQadhaText.SemiBold_edit
            android:id="@+id/pass_signin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margine_10"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"

            android:gravity="center"
            android:textSize="@dimen/text_18"
            android:background="@drawable/edit_back"
            android:hint="@string/pass" />
        <com.iqadha_app.iQadhaText.SemiBoldButton
            android:id="@+id/signin_btn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:elevation="0dp"
            android:layout_marginTop="@dimen/margine_30"
            android:stateListAnimator="@null"
            android:text="@string/signin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margine_30"
            android:gravity="center_horizontal">

            <com.iqadha_app.iQadhaText.Regular_Text
                android:id="@+id/txttt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="@color/light_grey_new"
                android:padding="5dp"
                android:textSize="@dimen/text_16"
                android:text="@string/no_account" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/txttt">

                <com.iqadha_app.iQadhaText.Regular_Text
                    android:id="@+id/signup_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/text_16"
                    android:textColor="@color/green" />
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
