<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:padding="@dimen/pad10"
            android:src="@mipmap/logo_green" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="48"
        android:layout_marginLeft="@dimen/margine_20"
        android:layout_marginRight="@dimen/margine_20"
        android:orientation="vertical">


        <com.iqadha_app.iQadhaText.SemiBold_edit
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_above="@+id/pass_sign_up"
            android:layout_gravity="center"
            android:singleLine="true"

            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_back"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_18" />

        <com.iqadha_app.iQadhaText.SemiBold_edit
            android:id="@+id/pass_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:singleLine="true"
            android:layout_marginTop="@dimen/margine_10"
            android:background="@drawable/edit_back"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/text_18" />

        <LinearLayout
            android:id="@+id/out_side"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/pass"

            android:layout_marginTop="@dimen/margine_10"
            android:background="@mipmap/gray_rect_box"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <!-- <com.sevenheaven.segmentcontrol.SegmentControl
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/segment_control"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                android:layout_margin="2dp"
                 android:textSize="18sp"
                 app:block_direction="horizon"
                 app:selectedColor="@color/green"
                 app:normalColor="@color/white"
                 app:textColors="@color/black"
                 app:backgroundColors="@color/white"
                 app:cornerRadius="5dp"
                 app:separatorWidth="2dp"
                 app:boundWidth="4dp"
                 app:texts="Male|Female"
                 app:verticalGap="10dp"
                 app:horizonGap="10dp"/>-->

            <com.iqadha_app.iQadhaText.SemiboldText
                android:id="@+id/male_btn"
               android:gravity="center"
                android:textSize="@dimen/text_18"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:text="@string/male" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:background="#eeeeee" />

            <com.iqadha_app.iQadhaText.SemiboldText
                android:id="@+id/female_btn"
                android:gravity="center"
                android:textSize="@dimen/text_18"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:text="@string/female"
                android:textAllCaps="false"
                 />
        </LinearLayout>


        <com.iqadha_app.iQadhaText.SemiBoldButton
            android:id="@+id/signup_btn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:elevation="0dp"
            android:layout_marginTop="@dimen/margine_30"
            android:text="@string/signup"
            android:stateListAnimator="@null"
            android:textSize="@dimen/text_18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="17"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margine_30"
            android:gravity="center_horizontal">

            <com.iqadha_app.iQadhaText.Regular_Text
                android:id="@+id/txttt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/light_grey_new"
                android:text="@string/already_account"
                android:textSize="@dimen/text_16" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/txttt">

                <com.iqadha_app.iQadhaText.Regular_Text
                    android:id="@+id/signin_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_16"
                    android:textStyle="bold" />
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
